--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,3 +1,9 @@
+#\uACF5\uD1B5 \uBA54\uC2DC\uC9C0
+required=\uD544\uC218\uC785\uB2C8\uB2E4.
+range=\uBC94\uC704\uB294 {0} ~ {1} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4. 
+max=\uCD5C\uB300 {0} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
+
+#Item \uBA54\uC2DC\uC9C0
 required.item.itemName=\uC0C1\uD488 \uC774\uB984\uC740 \uD544\uC218\uC785\uB2C8\uB2E4.
 range.item.price=\uAC00\uACA9\uC740 {0} ~ {1} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
 max.item.quantity=\uC218\uB7C9\uC740 \uCD5C\uB300 {0} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
